--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,22 @@ body {
     0 0 70px #DFA878, 0 0 80px #DFA878, 0 0 100px #DFA878, 0 0 150px #DFA878;
 }
 
+.glowing-text {
+  text-shadow: 0 0 10px rgba(255, 255, 255, 0.5), 0 0 20px rgba(255, 255, 255, 0.5), 0 0 30px rgba(255, 255, 255, 0.5);
+  animation: glow 2s ease-inaut infinite;
+}
+
+@keyframes glow {
+  0% {
+    text-shadow: 0 0 10px rgba(255, 255, 255, 0.5), 0 0 20px rgba(255, 255, 255, 0.5), 0 0 30px rgba(255, 255, 255, 0.5);
+  }
+  50% {
+    text-shadow: 0 0 15px rgba(255, 255, 255, 0.5), 0 0 25px rgba(255, 255, 255, 0.5), 0 0 35px rgba(255, 255, 255, 0.5);
+  }
+  100% {
+    text-shadow: 0 0 10px rgba(255, 255, 255, 0.5), 0 0 20px rgba(255, 255, 255, 0.5), 0 0 30px rgba(255, 255, 255, 0.5);
+  }
+}
 .navbar {
   display: flex;
   justify-content: space-between;
@@ -120,6 +136,37 @@ header {
   transform: translate(-50%, -50%);
   text-align: center;
 }
+
+.magnetic {
+  margin: -20px;
+  padding: 20px;
+  display: inline-block;
+  border-radius: 50%;
+  /*border: 1px solid #000; //use this for debugging*/
+}
+
+#magnet-button {
+  display: inline-block;
+}
+
+.my-button {
+  background-color: #FFF;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  border: 1px solid #000;
+  cursor: pointer;
+}
+
+.my-button:hover {
+  color: #FFF;
+  background-color: #000;
+  transition: 0.5s background-color, 0.5s box-shadow;
+  box-shadow: 0px 2px 25px rgba(0,0,0,0.5);
+}
+
+
+
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
@@ -215,4 +262,39 @@ header {
 /* Mengubah padding link navbar menjadi 10px */
 .navbar a {
   padding: 10px;
+}
+
+/* Menggunakan media query untuk membuat layout responsif */
+@media (max-width: 768px) {
+  /* Mengubah ukuran font marquee menjadi 100px */
+  marquee {
+    font-size: 100px;
+  }
+
+  /* Mengubah ukuran font glowing-text menjadi 100px */
+  .glowing-text {
+    font-size: 100px;
+  }
+
+  /* Mengubah ukuran font h2 menjadi 2rem */
+  h2 {
+    font-size: 2rem;
+  }
+
+  /* Mengubah padding section menjadi 20px */
+  section {
+    padding: 20px 0;
+  }
+}
+
+/* Mengubah ukuran font marquee menjadi 50px */
+@media (max-width: 480px) {
+  marquee {
+    font-size: 150px;
+  }
+
+  /* Mengubah ukuran font glowing-text menjadi 50px */
+  .glowing-text {
+    font-size: 50px;
+  }
 }
